# EvrikaDB

./: Cargo.toml  README.md
.claude/: settings.local.json
src/: lib.rs  main.rs  types.rs
src/commands/: hashes.rs  keys.rs  lists.rs  mod.rs  strings.rs  tests.rs
src/resp/: mod.rs  parser.rs
src/server/: mod.rs  thread_pool.rs
src/storage/: compaction.rs  manifest.rs  memtable.rs  mod.rs  record.rs  sstable.rs  tests.rs  wal.rs
